--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,0.5);
 }
 
+@media (min-width: 800px) {
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
+}
+
 /* General Styles */
 
 body {
@@ -44,9 +53,18 @@ section {
 }
 
 
+/* Typography */
 
+h1,
+h2,
+h3 {
+    line-height: 1;
+    margin: 0;
+}
 
-
+h1 {font-size: var(--fs-h1);}
+h2 {font-size: var(--fs-h2);}
+h3 {font-size: var(--fs-h3);}
 
 
 
